[gd_scene load_steps=6 format=3 uid="uid://cy0dueb87goup"]

[ext_resource type="Script" uid="uid://dyodh3bh7ehmm" path="res://upgrade_screen.gd" id="1_ovwte"]
[ext_resource type="Texture2D" uid="uid://dcdrfd5swh8xp" path="res://art/button.png" id="3_0theg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h4f0u"]
texture = ExtResource("3_0theg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c22kn"]
texture = ExtResource("3_0theg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ubkj5"]
texture = ExtResource("3_0theg")

[node name="UpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ovwte")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 1920.0
offset_bottom = 1074.0
mouse_default_cursor_shape = 3

[node name="IncreaseHealthButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 842.0
offset_top = 445.0
offset_right = 971.0
offset_bottom = 476.0
theme_override_styles/normal = SubResource("StyleBoxTexture_h4f0u")
text = "Increase Health"

[node name="IncreaseAttackSpeed" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 805.0
offset_top = 499.0
offset_right = 993.0
offset_bottom = 531.0
theme_override_styles/normal = SubResource("StyleBoxTexture_c22kn")
text = "Increase Attack Speed"

[node name="IncreaseDamage" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 832.0
offset_top = 550.0
offset_right = 974.0
offset_bottom = 581.0
theme_override_styles/normal = SubResource("StyleBoxTexture_ubkj5")
text = "Increase Damage"

[node name="UnlockArrows" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 553.0
offset_top = 441.0
offset_right = 682.0
offset_bottom = 472.0
theme_override_styles/normal = SubResource("StyleBoxTexture_h4f0u")
text = "Unlock Arrows"

[node name="UpgradeArrows" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 543.0
offset_top = 497.0
offset_right = 682.0
offset_bottom = 528.0
theme_override_styles/normal = SubResource("StyleBoxTexture_h4f0u")
text = "Upgrade Arrows"

[node name="IncreaseArrowSpeed" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 514.0
offset_top = 547.0
offset_right = 702.0
offset_bottom = 580.0
theme_override_styles/normal = SubResource("StyleBoxTexture_h4f0u")
text = "Increase Arrow Speed"

[node name="UnlockLightning" type="Button" parent="Panel" groups=["lightning"]]
layout_mode = 0
offset_left = 1099.0
offset_top = 443.0
offset_right = 1241.0
offset_bottom = 477.0
theme_override_styles/normal = SubResource("StyleBoxTexture_h4f0u")
text = "Unlock Lightning"

[node name="UpgradeLightning" type="Button" parent="Panel" groups=["lightning"]]
layout_mode = 0
offset_left = 1094.0
offset_top = 497.0
offset_right = 1252.0
offset_bottom = 534.0
theme_override_styles/normal = SubResource("StyleBoxTexture_h4f0u")
text = "Upgrade Lightning"

[node name="BackToGame" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1201.0
offset_top = 358.0
offset_right = 1246.0
offset_bottom = 389.0
text = "X"

[connection signal="pressed" from="Panel/IncreaseHealthButton" to="." method="_on_increase_health_button_pressed"]
[connection signal="pressed" from="Panel/IncreaseAttackSpeed" to="." method="_on_increase_attack_speed_pressed"]
[connection signal="pressed" from="Panel/IncreaseDamage" to="." method="_on_increase_damage_pressed"]
[connection signal="pressed" from="Panel/UnlockArrows" to="." method="_on_unlock_arrows_pressed"]
[connection signal="pressed" from="Panel/UpgradeArrows" to="." method="_on_upgrade_arrows_pressed"]
[connection signal="pressed" from="Panel/IncreaseArrowSpeed" to="." method="_on_increase_arrow_speed_pressed"]
[connection signal="pressed" from="Panel/UnlockLightning" to="." method="_on_unlock_lightning_pressed"]
[connection signal="pressed" from="Panel/UpgradeLightning" to="." method="_on_upgrade_lightning_pressed"]
[connection signal="pressed" from="Panel/BackToGame" to="." method="_on_back_to_game_pressed"]
